--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.8",
-    "@angular/cdk": "^11.2.7",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "~11.2.8",
     "@angular/compiler": "~11.2.8",
     "@angular/core": "~11.2.8",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.8",
     "@angular/material": "^11.2.7",
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
-    "rxjs": "~6.6.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.3.2",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
