--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.8",
     "@angular/material": "^11.2.7",
+    "@angular/material-moment-adapter": "^12.0.0",
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "angular2-hotkeys": "^2.3.2",
+    "chart.js": "^2.9.3",
+    "moment": "^2.29.1",
+    "ng2-charts": "^2.2.3",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.2",
     "rxjs": "^6.6.7",
+    "socket.io-client": "^4.1.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
