--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@angular/router": "~11.2.8",
     "angular2-hotkeys": "^2.3.2",
     "chart.js": "^2.9.3",
+    "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
     "ng2-charts": "^2.2.3",
+    "ngx-currency": "^2.5.2",
+    "ngx-mask": "^12.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.2",
     "rxjs": "^6.6.7",
