--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@angular/router": "~11.2.8",
     "@ngrx/store": "^12.4.0",
     "@ngrx/store-devtools": "^12.4.0",
+    "ag-grid-angular": "^26.0.0",
+    "ag-grid-community": "^26.0.0",
     "angular2-hotkeys": "^2.3.2",
     "chart.js": "^2.9.3",
     "material-design-icons": "^3.0.1",
